--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,9 +25,17 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
-article, aside, details, figcaption, figure,
+article, aside, details,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
+figure {
+  display: table;
+}
+
+figcaption {
+  display: table-caption;
+  caption-side: bottom;
+}
 
 body {
 	line-height: 1;
