changed ul padding-left to 10px

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1755,7 +1755,7 @@ input, select, textarea {
 
 	ul {
 		list-style: disc;
-		padding-left: 1em;
+		padding-left: 10px; <!-- 1em -->
 	}
 
 		ul li {
