--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1755,16 +1755,16 @@ input, select, textarea {
 
 	ul {
 		list-style: disc;
-		padding-left: 10px; <!-- 1em -->
+		padding-left: 1em; <!-- 1em -->
 	}
 
 		ul li {
-			padding-left: 0.5em;
+			padding-left: 20px; <!-- 0.5em -->
 		}
 
 		ul.style2 {
 			list-style: none;
-			padding-left: 0;
+			padding-left: 0; <!-- 0 -->
 		}
 
 			ul.style2 li {
@@ -1781,7 +1781,7 @@ input, select, textarea {
 
 		ul.style3 {
 			list-style: none;
-			padding-left: 0;
+			padding-left: 0; <!-- 0 -->
 		}
 
 			ul.style3 li {
