--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1755,7 +1755,7 @@ input, select, textarea {
 
 	ul {
 		list-style: disc;
-		padding-left: 20px; <!-- 1em -->
+		padding-left: 5em; <!-- 1em -->
 	}
 
 		ul li {
@@ -1764,7 +1764,7 @@ input, select, textarea {
 
 		ul.style2 {
 			list-style: none;
-			padding-left: 20px; <!-- 0 -->
+			padding-left: 5em; <!-- 0 -->
 		}
 
 			ul.style2 li {
@@ -1781,7 +1781,7 @@ input, select, textarea {
 
 		ul.style3 {
 			list-style: none;
-			padding-left: 20px; <!-- 0 -->
+			padding-left: 5em; <!-- 0 -->
 		}
 
 			ul.style3 li {
