--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2069,7 +2069,7 @@ input, select, textarea {
 		justify-content: center;
 		position: relative;
 		height: 24em;
-		background: url("../../images/banner.jpg") center center;
+		background: url("../../images/cassini_TitanSaturn.jpg") center center;
 		background-size: cover;
 		padding: 0;
 	}
